--- a/src/index.css
+++ b/src/index.css
@@ -89,9 +89,14 @@ body {
   padding: 1rem;
   color: var(--black-color);
 }
-.tasks-list h2 {
+.tasks-list h2,
+.tasks-list p {
   font-weight: 200;
   font-size: 1.2rem;
+}
+.tasks-list p {
+  font-size: 0.8rem;
+  padding: 1rem;
 }
 .tasks-list ul li {
   list-style: none;
