--- a/src/index.css
+++ b/src/index.css
@@ -63,7 +63,8 @@ body {
   margin-bottom: 1rem;
   color: var(--main-color);
 }
-.add-task input {
+.add-task input,
+.tasks-list input {
   padding: 0.5rem;
   color: var(--black-color);
   border: var(--main-color) 1px solid;
@@ -118,15 +119,34 @@ body {
 .tasks-list button {
   background-color: transparent;
   border: none;
-  margin-left: 10%;
-  width: 20px;
-  height: 20px;
+  width: 25px;
+  height: 25px;
   color: var(--success-color);
   transition: var(--transition);
+  margin-left: 5px;
 }
 .tasks-list button:hover {
   background-color: var(--success-color);
   color: var(--white-color);
   border-radius: 50%;
   padding-top: 0.2rem;
+}
+#edit {
+  color: var(--detail-color);
+}
+#edit:hover {
+  color: var(--white-color);
+  background-color: var(--detail-color);
+  opacity: 0.5;
+}
+#save {
+  color: var(--main-color);
+}
+#save:hover {
+  color: var(--white-color);
+  background-color: var(--main-color);
+  opacity: 0.5;
+}
+.tasks-list input {
+  border-radius: 3px;
 }
