--- a/src/index.css
+++ b/src/index.css
@@ -44,14 +44,18 @@ body {
 .tasks-container {
   border-radius: 8px;
   max-width: 800px;
-  min-width: 400px;
+
   background-color: #fff;
   padding: 1rem;
   margin-left: 10%;
   margin-right: 10%;
   box-shadow: var(--shadow);
 }
-
+@media screen and (max-width: 450px) {
+  .tasks-container {
+    width: 300px;
+  }
+}
 .add-task {
   text-align: center;
   padding: 1rem;
@@ -60,6 +64,7 @@ body {
   font-weight: 300;
   font-size: 2rem;
   text-transform: uppercase;
+  margin: auto;
   margin-bottom: 1rem;
   color: var(--main-color);
 }
