--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,8 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   font-family: "Poppins";
+  width: 100%;
+  height: 100%;
 }
 .container {
   display: grid;
